Updated vertoo patterns.

--- a/vertoo.config
+++ b/vertoo.config
@@ -1,7 +1,7 @@
 # -*- mode: python -*-
 addScheme('normal', '%major.%minor.%release')
 addScheme('winrc', '%major,%minor,%release')
-main = addModule('MonetDB')
+main = addModule('monetdb')
 main.setVersionFormat('@normal')
 
 # %v - unadorned version number
@@ -15,55 +15,55 @@ main.addAnchors("gdk/libbat.rc",
                 'VALUE "ProductVersion", "%v\\0"',
                 arguments(pattern = 'FILEVERSION %v', format = '@winrc'),
                 arguments(pattern = 'PRODUCTVERSION %v', format = '@winrc'))
-main.addAnchors("clients/src/odbc/winsetup/setup.rc",
+main.addAnchors("clients/odbc/winsetup/setup.rc",
                 'VALUE "FileVersion", "%v"',
                 'VALUE "ProductVersion", "%v"',
                 arguments(pattern = 'FILEVERSION %v', format = '@winrc'),
                 arguments(pattern = 'PRODUCTVERSION %v', format = '@winrc'))
-main.addAnchors("clients/src/odbc/driver/driver.rc",
+main.addAnchors("clients/odbc/driver/driver.rc",
                 'VALUE "FileVersion", "%v\\0"',
                 'VALUE "ProductVersion", "%v\\0"',
                 arguments(pattern = 'FILEVERSION %v', format = '@winrc'),
                 arguments(pattern = 'PRODUCTVERSION %v', format = '@winrc'))
-main.addAnchors("clients/src/mapilib/Mapi.rc",
+main.addAnchors("clients/mapilib/mapi.rc",
                 'VALUE "FileVersion", "%v\\0"',
                 'VALUE "ProductVersion", "%v\\0"',
                 arguments(pattern = 'FILEVERSION %v', format = '@winrc'),
                 arguments(pattern = 'PRODUCTVERSION %v', format = '@winrc'))
-main.addAnchors("MonetDB4/src/monet/libmonet.rc",
+main.addAnchors("monetdb4/monet/libmonet.rc",
                 'VALUE "FileVersion", "%v\\0"',
                 'VALUE "ProductVersion", "%v\\0"',
                 arguments(pattern = 'FILEVERSION %v', format = '@winrc'),
                 arguments(pattern = 'PRODUCTVERSION %v', format = '@winrc'))
-main.addAnchors("MonetDB5/src/tools/libmonetdb5.rc",
+main.addAnchors("monetdb5/tools/libmonetdb5.rc",
                 'VALUE "FileVersion", "%v\\0"',
                 'VALUE "ProductVersion", "%v\\0"',
                 arguments(pattern = 'FILEVERSION %v', format = '@winrc'),
                 arguments(pattern = 'PRODUCTVERSION %v', format = '@winrc'))
 main.addAnchor("pathfinder/runtime/xrpc/admin/title.html.in", "MonetDB/XQuery %v")
 main.addAnchor("pathfinder/runtime/pathfinder.mx", "MonetDB/XQuery module v%v")
-main.addAnchors("NT/installers32/MonetDB-ODBC-Installer.vdproj",
+main.addAnchors("NT/installer32/MonetDB-ODBC-Installer.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
                           format = "@normal"))
-main.addAnchors("NT/installers64/MonetDB-ODBC-Installer.vdproj",
+main.addAnchors("NT/installer64/MonetDB-ODBC-Installer.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
                           format = "@normal"))
-main.addAnchors("NT/installers32/MonetDB4-XQuery-Installer.vdproj",
+main.addAnchors("NT/installer32/MonetDB4-XQuery-Installer.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
                           format = "@normal"))
-main.addAnchors("NT/installers64/MonetDB4-XQuery-Installer.vdproj",
+main.addAnchors("NT/installer64/MonetDB4-XQuery-Installer.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
                           format = "@normal"))
-main.addAnchors("NT/installers32/MonetDB5-Geom-Module.vdproj",
+main.addAnchors("NT/installer32/MonetDB5-Geom-Module.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
                           format = "@normal"))
-main.addAnchors("NT/installers64/MonetDB5-Geom-Module.vdproj",
+main.addAnchors("NT/installer64/MonetDB5-Geom-Module.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
                           format = "@normal"))
-main.addAnchors("NT/installers32/MonetDB5-SQL-Installer.vdproj",
+main.addAnchors("NT/installer32/MonetDB5-SQL-Installer.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
                           format = "@normal"))
-main.addAnchors("NT/installers64/MonetDB5-SQL-Installer.vdproj",
+main.addAnchors("NT/installer64/MonetDB5-SQL-Installer.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
                           format = "@normal"))
 main.addAnchor("template/configure.ag", "[MonetDB template], [%v]")
