Created upgradepath so that we can later upgrade without MonetDB4. This is not yet fully tested, but it seems to work on at least Fedora.

--- a/clients/mapiclient/Makefile.ag
+++ b/clients/mapiclient/Makefile.ag
@@ -31,6 +31,15 @@ bin_mclient = {
 		$(curl_LIBS) $(LTLIBICONV)
 }
 
+bin_m4client = {
+	COND = HAVE_MONETDB4
+	SOURCES = mclient.c ReadlineTools.c
+	LIBS = libmcutil ../mapilib/libmapi4 \
+		../../common/stream/libstream \
+		$(READLINE_LIBS) \
+		$(curl_LIBS) $(LTLIBICONV)
+}
+
 bin_msqldump = {
 	SOURCES = msqldump.c
 	LIBS = libmcutil ../mapilib/libmapi \
