--- a/clients/mapilib/Makefile.ag
+++ b/clients/mapilib/Makefile.ag
@@ -25,6 +25,13 @@ lib_mapi = {
 		../../common/options/libmoptions $(openssl_LIBS)
 }
 
+lib_mapi4 = {
+	COND = HAVE_MONETDB4
+	SOURCES = mapi.mx mapi.rc
+	LIBS = $(SOCKET_LIBS) ../../common/stream/libstream \
+		../../common/options/libmoptions $(openssl_LIBS)
+}
+
 headers_mapi = {
 	DIR = includedir/monetdb
 	HEADERS = h
