--- a/common/stream/Makefile.ag
+++ b/common/stream/Makefile.ag
@@ -37,6 +37,17 @@ lib_stream  =  {
 		   $(ICONV_LIBS)
 }
 
+lib_stream4  =  {
+	COND = HAVE_MONETDB4
+	SOURCES = stream.c stream.h
+	LIBS = $(SOCKET_LIBS) \
+		   $(zlib_LIBS) \
+		   $(BZ_LIBS) \
+		   $(openssl_LIBS) \
+		   $(curl_LIBS) \
+		   $(ICONV_LIBS)
+}
+
 headers_common = {
 	DIR = includedir/monetdb
 	HEADERS = h
