--- a/monetdb4/modules/calibrator/Makefile.ag
+++ b/monetdb4/modules/calibrator/Makefile.ag
@@ -29,7 +29,7 @@ LIBS = {
 	SEP = _
 	SOURCES = calib.mx 
 	#SCRIPTS = mil ""
-	LIBS = ../../monet/libmonet ../../../gdk/libbat \
+	LIBS = ../../monet/libmonet ../../../gdk/libbat4 \
 		$(SOCKET_LIBS) $(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS) $(MATH_LIBS)
 }
 
