--- a/monetdb4/modules/mapi/Makefile.ag
+++ b/monetdb4/modules/mapi/Makefile.ag
@@ -26,8 +26,8 @@ lib__mapi = {
 	DIR = libdir/monetdb4
 	SOURCES = mapi.mx
 	LIBS =  ../../../common/options/libmoptions \
-		../../../common/stream/libstream \
-		../../../gdk/libbat \
+		../../../common/stream/libstream4 \
+		../../../gdk/libbat4 \
 		../../monet/libmonet \
 		$(SOCKET_LIBS) $(MALLOC_LIBS) $(PTHREAD_LIBS) \
 		$(DL_LIBS) $(openssl_LIBS)
