--- a/pathfinder/modules/pftijah/Makefile.ag
+++ b/pathfinder/modules/pftijah/Makefile.ag
@@ -106,8 +106,8 @@ lib__pftijah = {
 		./tjc/libtjc  \
 		../../runtime/libserialize \
 		../../runtime/lib_pf_support $(PF_LIBS) \
-		../../../gdk/libbat \
-		../../../common/stream/libstream \
+		../../../gdk/libbat4 \
+		../../../common/stream/libstream4 \
 		../../../monetdb4/monet/libmonet \
 		../../../monetdb4/modules/plain/lib_streams \
 		../../../monetdb4/modules/plain/lib_builtin \
