Use m4client.bat in addition to m4client.exe.

--- a/clients/NT/Makefile.ag
+++ b/clients/NT/Makefile.ag
@@ -20,3 +20,10 @@ scripts_bat = {
 	DIR = prefix
 	SOURCES = mclient.bat msqldump.bat
 }
+
+scripts_bat4 = {
+	COND = HAVE_MONETDB4
+	EXT = bat
+	DIR = prefix
+	SOURCES = mclient4.bat
+}
