We need to update the version number in the .spec file as well.

--- a/vertoo.config
+++ b/vertoo.config
@@ -9,6 +9,7 @@ main.setVersionFormat('@normal')
 # %Q - version number surrounded by double quotes
 
 main.addAnchor("configure.ag", "[MonetDB Common], [%v]")
+main.addAnchor("MonetDB.spec", "%define version %v")
 main.addAnchor("NT/rules.msc", "VERSION=%v")
 main.addAnchors("gdk/libbat.rc",
                 'VALUE "FileVersion", "%v\\0"',
