--- a/vertoo.config
+++ b/vertoo.config
@@ -8,7 +8,7 @@ main.setVersionFormat('@normal')
 # %q - version number surrounded by single quotes
 # %Q - version number surrounded by double quotes
 
-main.addAnchor("configure.ag", "[MonetDB Common], [%v]")
+main.addAnchor("configure.ag", "[MonetDB], [%v]")
 main.addAnchor("MonetDB.spec", "%define version %v")
 main.addAnchor("NT/rules.msc", "VERSION=%v")
 main.addAnchors("gdk/libbat.rc",
@@ -63,8 +63,20 @@ main.addAnchors("NT/installer64/MonetDB5-Geom-Module.vdproj",
                           format = "@normal"))
 main.addAnchors("NT/installer32/MonetDB5-SQL-Installer.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
+                          format = "@normal"),
+                arguments(pattern = r'MonetDB-SQL-%v\\dump-restore.txt',
+                          format = "@normal"),
+                arguments(pattern = r'MonetDB-SQL-%v\\dump-restore.html',
+                          format = "@normal"),
+                arguments(pattern = '"8:MonetDB-SQL-%v"',
                           format = "@normal"))
 main.addAnchors("NT/installer64/MonetDB5-SQL-Installer.vdproj",
                 arguments(pattern = '"ProductVersion" = "8:%v"',
+                          format = "@normal"),
+                arguments(pattern = r'MonetDB-SQL-%v\\dump-restore.txt',
+                          format = "@normal"),
+                arguments(pattern = r'MonetDB-SQL-%v\\dump-restore.html',
+                          format = "@normal"),
+                arguments(pattern = '"8:MonetDB-SQL-%v"',
                           format = "@normal"))
 main.addAnchor("template/configure.ag", "[MonetDB template], [%v]")
