--- a/monetdb5/tools/Makefile.ag
+++ b/monetdb5/tools/Makefile.ag
@@ -39,7 +39,7 @@ lib_monetdb5 = {
 		$(curl_LIBS) \
 		$(MATH_LIBS) $(SOCKET_LIBS) $(MALLOC_LIBS) $(PTHREAD_LIBS) \
 		$(DL_LIBS) $(READLINE_LIBS) $(openssl_LIBS) $(pcre_LIBS) \
-		$(LTLIBICONV) $(zlib_LIBS)
+		$(LTLIBICONV) $(zlib_LIBS) $(PSAPILIB)
 }
 
 EXTRA_DIST_DIR = Tests
