move automatic modpath detection
It's better not to reinvent the proper modpath every time we need it,
but do it once instead.  At the same time, apparently find_include isn't
the only function that searches monet_mod_path, so by setting a value
for that variable early enough in the process we fix Mtest not being
able to list the available modules using the -s flag of mserver5.

--- a/tools/mserver/Makefile.ag
+++ b/tools/mserver/Makefile.ag
@@ -20,6 +20,7 @@ INCLUDES = ../../monetdb5/mal \
 		   ../../monetdb5/misc \
 		   ../../gdk \
 		   ../../common/stream \
+		   ../../common/utils \
 		   ../../common/options \
 		   $(openssl_CFLAGS) $(pcre_CFLAGS) $(libxml2_CFLAGS)
 
@@ -28,5 +29,5 @@ bin_mserver5 = {
 	LIBS = ../../monetdb5/tools/libmonetdb5 @SHARED_LIBS@ \
 		../../gdk/libbat \
 		$(SOCKET_LIBS) $(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS) \
-		$(curl_LIBS) $(pcre_LIBS) $(openssl_LIBS)
+		$(curl_LIBS) $(pcre_LIBS) $(openssl_LIBS) $(PSAPILIB)
 }
