--- a/pathfinder/compiler/Makefile.ag
+++ b/pathfinder/compiler/Makefile.ag
@@ -21,7 +21,7 @@
 # 2008-2010 Eberhard Karls Universitaet Tuebingen, respectively.  All
 # Rights Reserved.
 
-SUBDIRS = utils schema debug mem parser semantics core algebra mil include sql algebra-m5sql xmlimport 
+SUBDIRS = utils schema debug mem parser semantics core algebra mil include sql xmlimport 
 
 EXTRA_DIST_DIR = Tests
 
@@ -74,7 +74,6 @@ bin_pf = {
                 mil/libmil \
                 libcompiler2 \
                 mem/libmem \
-                algebra-m5sql/libmsa \
                 sql/libsql \
                 #
                 xmlimport/libxmlimport \
