--- a/geom/Makefile.ag
+++ b/geom/Makefile.ag
@@ -18,7 +18,7 @@
 SUBDIRS = lib HAVE_MONETDB5?monetdb5 sql
 
 EXTRA_DIST = RunMtest.in RunMapprove.in
-EXTRA_DIST_DIR = NT BugTracker
+EXTRA_DIST_DIR = BugTracker
 
 TESTS = RunMtest
 TESTS_ENVIRONMENT = $(SHELL)
