monetdb5.conf: drop
No longer read monetdb5.conf by default from mserver5.
Move documentation from mserver5.mx to mserver5.1.
Move creation of merovingian directories to merovingian/daemon.

--- a/tools/merovingian/daemon/Makefile.ag
+++ b/tools/merovingian/daemon/Makefile.ag
@@ -17,6 +17,13 @@
 
 man_MANS = monetdbd.1
 
+monetdb_var_logdir = $(localstatedir)/log/monetdb
+monetdb_var_log_DATA = 
+monetdb_var_rundir = $(localstatedir)/run/monetdb
+monetdb_var_run_DATA = 
+monetdb_var_dbfarmdir = $(localstatedir)/monetdb5/dbfarm
+monetdb_var_dbfarm_DATA = 
+
 # MONETDB5: Sabaoth
 INCLUDES = .. \
 		   ../../../monetdb5/misc \
