--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,8 @@ Section: misc
 Priority: extra
 Maintainer: MonetDB BV <info@monetdb.org>
 Homepage: http://www.monetdb.org/
+Vcs-Browser: http://dev.monetdb.org/hg/MonetDB/
+Vcs-Hg: http://dev.monetdb.org/hg/MonetDB/
 Build-Depends: debhelper (>= 5), autotools-dev, cdbs, bison, flex, libbz2-dev, libcfitsio3-dev, libcurl4-gnutls-dev, libgeos-dev, libpcre3-dev, libperl-dev, libreadline5-dev, libssl-dev, libxml2-dev, perl, python, ruby, rubygems, swig, unixodbc-dev, uuid-dev, zlib1g-dev
 # Build-Depends: libraptor1-dev
 Standards-Version: 3.8.0
@@ -11,6 +13,7 @@ Package: libmonetdb11
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libmonetdb1, libmonetdb-dev
+Replaces: libmonetdb1, libmonetdb-dev
 Description: MonetDB core library
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -49,6 +52,7 @@ Package: libmonetdb-client11
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libmonetdb-client1
+Replaces: libmonetdb-client1
 Description: MonetDB client/server interface library
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -88,6 +92,7 @@ Package: libmonetdb-client-odbc11
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libmonetdb-client-odbc1, libmonetdb-client-odbc-dev
+Replaces: libmonetdb-client-odbc1, libmonetdb-client-odbc-dev
 Description: MonetDB ODBC driver
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -113,6 +118,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${perl:Depends}
 Provides: ${perl:Provides}
 Conflicts: libmonetdb-client-perl
+Replaces: libmonetdb-client-perl
 Description: MonetDB perl client code
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -152,6 +158,7 @@ Description: MonetDB client testing tools
 # Architecture: any
 # Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb4-server
 # Conflicts: libmonetdb4-server-geom0, monetdb-geom, monetdb-geom-dev
+# Replaces: libmonetdb4-server-geom0, monetdb-geom, monetdb-geom-dev
 # Description: MonetDB4 GIS module
 #  MonetDB is a database management system that is developed from a
 #  main-memory perspective with use of a fully decomposed storage model,
@@ -166,6 +173,7 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb5-sql
 Conflicts: libmonetdb5-server-geom0, monetdb-geom, monetdb-geom-dev
+Replaces: libmonetdb5-server-geom0, monetdb-geom, monetdb-geom-dev
 Description: MonetDB5 SQL GIS support module
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -178,7 +186,8 @@ Description: MonetDB5 SQL GIS support module
 Package: monetdb4-server
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, adduser
-Conflicts: libmonetdb4-server-dev, libmonetdb4-server4
+Conflicts: libmonetdb4-server-dev, libmonetdb4-server4, libmonetdb1, libmonetdb-dev
+Replaces: libmonetdb4-server-dev, libmonetdb4-server4
 Description: MonetDB database server version 4
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -193,7 +202,8 @@ Description: MonetDB database server version 4
 Package: monetdb5-server
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, adduser
-Conflicts: libmonetdb5-server5, libmonetdb5-server-dev
+Conflicts: libmonetdb5-server5, libmonetdb5-server-dev, libmonetdb1, libmonetdb-dev
+Replaces: libmonetdb5-server5, libmonetdb5-server-dev
 Description: MonetDB database server version 5
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -206,7 +216,7 @@ Description: MonetDB database server version 5
 
 Package: monetdb-xquery
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb4-server
+Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb4-server (= ${source:Version})
 Description: MonetDB xquery support for MonetDB4-server
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -220,6 +230,7 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libpf-ferry0
+Replaces: libpf-ferry0
 Description: MonetDB XQuery Ferry library
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -231,7 +242,7 @@ Description: MonetDB XQuery Ferry library
 Package: libpf-ferry-dev
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libpf-ferry0
+Depends: ${shlibs:Depends}, ${misc:Depends}, libpf-ferry0 (= ${source:Version})
 Description: MonetDB XQuery Ferry library development files
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -246,6 +257,7 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libmonetdb4-xquery0, libmonetdb4-xquery-dev
+Replaces: libmonetdb4-xquery0, libmonetdb4-xquery-dev
 Description: MonetDB xquery libraries
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -257,8 +269,9 @@ Description: MonetDB xquery libraries
 
 Package: monetdb5-sql
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb5-server
+Depends: ${shlibs:Depends}, ${misc:Depends}, monetdb5-server (= ${source:Version})
 Conflicts: libmonetdb5-sql2
+Replaces: libmonetdb5-sql2
 Description: MonetDB SQL support for monetdb5
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
@@ -282,7 +295,7 @@ Description: MonetDB testing programs
 
 Package: monetdb-testing-python
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, python, monetdb-testing, monetdb-client-testing
+Depends: ${shlibs:Depends}, ${misc:Depends}, python, monetdb-testing (= ${source:Version}), monetdb-client-testing (= ${source:Version})
 Description: MonetDB testing Python programs
  MonetDB is a database management system that is developed from a
  main-memory perspective with use of a fully decomposed storage model,
