Use libtool version numbers the way they were intended.
Libraries (the four that are installed in /usr/lib(64)) now have
version numbers which are *independent* of the package version
number.  The library version numbers are stored in the file
`libversions'.
Also, dynamically loaded modules (the .so files in
/usr/lib(64)/monetdb{4,5}/lib) now don't have a version number
anymore.

There are two new flags available in the LIB and LIBS sections of
Makefile.ag: VERSION is the libtool version number (filled in by
configure), and MODULE, when present, says that the library being
produced is, in fact, a module, and hence should not have a version
number.

The ODBC driver is also a type of module, so doesn't have a version
number, even though it is installed in /usr/lib(64).

Note that for Windows nothing changes.

--- a/clients/mapilib/Makefile.ag
+++ b/clients/mapilib/Makefile.ag
@@ -20,12 +20,14 @@ MTSAFE
 INCLUDES = ../../common/options ../../common/stream $(openssl_CFLAGS)
 
 lib_mapi = {
+	VERSION = $(MAPI_VERSION)
 	SOURCES = mapi.mx mapi.rc
 	LIBS = $(SOCKET_LIBS) ../../common/stream/libstream \
 		../../common/options/libmoptions $(openssl_LIBS)
 }
 
 lib_mapi4 = {
+	VERSION = $(MAPI_VERSION)
 	COND = HAVE_MONETDB4
 	SOURCES = mapi.mx mapi.rc
 	LIBS = $(SOCKET_LIBS) ../../common/stream/libstream4 \
