--- a/common/stream/Makefile.ag
+++ b/common/stream/Makefile.ag
@@ -29,6 +29,7 @@ INCLUDES = $(zlib_CFLAGS) \
 
 lib_stream  =  {
 	SOURCES = stream.c stream.h
+	VERSION = $(STREAM_VERSION)
 	LIBS = $(SOCKET_LIBS) \
 		   $(zlib_LIBS) \
 		   $(BZ_LIBS) \
@@ -40,6 +41,7 @@ lib_stream  =  {
 lib_stream4  =  {
 	COND = HAVE_MONETDB4
 	SOURCES = stream.c stream.h
+	VERSION = $(STREAM_VERSION)
 	LIBS = $(SOCKET_LIBS) \
 		   $(zlib_LIBS) \
 		   $(BZ_LIBS) \
