--- a/geom/monetdb4/Makefile.ag
+++ b/geom/monetdb4/Makefile.ag
@@ -28,6 +28,7 @@ INCLUDES = ../lib \
 		   $(GEOS_INCS)
 
 lib__geom = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = geom.mx
 	LIBS = ../lib/libgeom \
