--- a/monetdb4/modules/plain/Makefile.ag
+++ b/monetdb4/modules/plain/Makefile.ag
@@ -25,6 +25,7 @@ INCLUDES = ../../monet \
 MTSAFE
 
 lib__streams = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = streams.mx
 	#SCRIPTS = mil ""
@@ -36,8 +37,8 @@ lib__streams = {
 }
 
 lib__str = {
+	MODULE
 	DIR = libdir/monetdb4
-	SEP = _
 	SOURCES = str.mx
 	#SCRIPTS = mil ""
 	LIBS = ../../../common/stream/libstream4 \
@@ -48,8 +49,8 @@ lib__str = {
 }
 
 lib__xtables = {
+	MODULE
 	DIR = libdir/monetdb4
-	SEP = _
 	SOURCES = xtables.mx
 	#SCRIPTS = mil ""
 	LIBS = ../../../common/stream/libstream4 \
@@ -60,8 +61,8 @@ lib__xtables = {
 }
 
 lib__logger = {
+	MODULE
 	DIR = libdir/monetdb4
-	SEP = _
 	SOURCES = logger.mx
 	#SCRIPTS = mil ""
 	LIBS = ../../../common/stream/libstream4 \
@@ -73,6 +74,7 @@ lib__logger = {
 
 LIBS = {
 	DIR = libdir/monetdb4
+	MODULE
 	SEP = _
 	SOURCES = \
 		algebra.mx arith.mx bat.mx builtin.mx sys.mx trans.mx \
@@ -90,8 +92,8 @@ LIBS = {
 }
 
 lib__aggrX3 = {
+	MODULE
 	DIR = libdir/monetdb4
-	SEP = _
 	SOURCES = aggrX3.mx \
 		aggrX3_be_sum.mx aggrX3_be_prod.mx aggrX3_be_avg.mx aggrX3_be_minmax.mx aggrX3_be_count.mx \
 		aggrX3_bge_sum.mx aggrX3_bge_prod.mx aggrX3_bge_avg.mx aggrX3_bge_minmax.mx aggrX3_bge_count.mx
@@ -104,6 +106,7 @@ lib__aggrX3 = {
 EXTRA_DIST = aggrX3_ri.mx
 
 lib__counters = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = counters.mx
 	#SCRIPTS = mil ""
@@ -115,6 +118,7 @@ lib__counters = {
 }
 
 lib__pcl = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = pcl.mx
 	#SCRIPTS = mil ""
@@ -126,6 +130,7 @@ lib__pcl = {
 }
 
 lib__pcre = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = pcre.mx
 	#SCRIPTS = mil ""
