--- a/monetdb4/modules/calibrator/Makefile.ag
+++ b/monetdb4/modules/calibrator/Makefile.ag
@@ -25,6 +25,7 @@ EXTRA_DIST = calib_analyse.c  calib_main.c  calib_print.c  calib_run.c \
 	calib_common.c   calib_plot.c  calib_smp.c
 
 LIBS = {
+	MODULE
 	DIR = libdir/monetdb4
 	SEP = _
 	SOURCES = calib.mx 
