--- a/monetdb4/modules/mapi/Makefile.ag
+++ b/monetdb4/modules/mapi/Makefile.ag
@@ -23,6 +23,7 @@ INCLUDES = .. ../../monet \
 MTSAFE
 
 lib__mapi = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = mapi.mx
 	LIBS =  ../../../common/options/libmoptions \
