--- a/monetdb5/extras/compiler/Makefile.ag
+++ b/monetdb5/extras/compiler/Makefile.ag
@@ -24,6 +24,7 @@ INCLUDES = ../../modules/atoms ../../mal \
 MTSAFE
 
 LIBS = {
+	MODULE
 	DIR = libdir/monetdb5
 	SEP = _
 	SOURCES = mal_compiler.mx 
