--- a/pathfinder/compiler/Makefile.ag
+++ b/pathfinder/compiler/Makefile.ag
@@ -155,6 +155,7 @@ bin_pfsql = {
 #  before their definition, which makes e.g., libmem a good candidate
 #  for the last item of the list.)
 lib_pf_ferry = {
+	VERSION = 42:1:42
 	LIBS = \
 		./algebra/liblogopt \
 		./algebra/map/libmap \
