--- a/pathfinder/runtime/Makefile.ag
+++ b/pathfinder/runtime/Makefile.ag
@@ -70,6 +70,7 @@ lib_xrpc_common = {
 }
 
 lib__pf_support = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = \
 		pf_support.mx \
@@ -90,6 +91,7 @@ lib__pf_support = {
 }
 
 lib__pf_standoff = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = \
 		pf_standoff.mx 
@@ -108,6 +110,7 @@ lib__pf_standoff = {
 }
 
 lib__pathfinder = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = \
 		pathfinder.mx
@@ -145,6 +148,7 @@ lib__pathfinder = {
 }
 
 lib__xrpc_client = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = xrpc_client.mx
 	LIBS = \
@@ -160,6 +164,7 @@ lib__xrpc_client = {
 }
 
 lib__xrpc_server = {
+	MODULE
 	DIR = libdir/monetdb4
 	SOURCES = \
 		shttpd.c shttpd.h \
