--- a/sql/backends/monet5/Makefile.ag
+++ b/sql/backends/monet5/Makefile.ag
@@ -37,6 +37,7 @@ INCLUDES = ../../include ../../common ../../storage ../../server \
 		   $(READLINE_INCS)
 
 lib__sql = {
+	MODULE
 	DIR = libdir/monetdb5
 	SOURCES = \
 		sql.mx \
