--- a/template/src/monetdb5/Makefile.ag
+++ b/template/src/monetdb5/Makefile.ag
@@ -21,6 +21,7 @@ MTSAFE
 INCLUDES = $(MONETDB5_INCS) $(MONETDB_INCS)
 
 lib__example = {
+	MODULE
 	DIR = libdir/MonetDB5
 	SOURCES = example.mx
 	LIBS = $(MONETDB5_MODS) 
