--- a/java/Makefile.ag
+++ b/java/Makefile.ag
@@ -17,9 +17,7 @@
 
 SUBDIRS = HAVE_JAVAJDBC?tests
 
-EXTRA_DIST = RunMtest.in RunMtest.bat.in \
-		RunMapprove.in \
-		build.xml build.properties release.txt
+EXTRA_DIST = build.xml build.properties release.txt
 
 EXTRA_DIST_DIR = src \
 		 example
@@ -42,8 +40,6 @@ ant_distmerocontrol = {
 	FILES = merocontrol.jar
 }
 
-TESTS = RunMtest
-TESTS_ENVIRONMENT = $(SHELL)
 JAVA_HOME = @JAVA_HOME@
 
 # vim: ft=automake :
