fixed MOD_PATH settings in */RunMtest.in

--- a/geom/RunMtest.in
+++ b/geom/RunMtest.in
@@ -40,7 +40,7 @@ done
 # where compiled Geom modules are to be found
 for d in monetdb$V
 do
-	MOD_PATH="${MOD_PATH}${builddir}/$d/.libs:${builddir}/$d:"
+	MOD_PATH="${MOD_PATH}:${builddir}/$d/.libs:${builddir}/$d"
 	# enable auto-loading of modules before `make install`
 	mkdir -p ${builddir}/$d/autoload
 	cp -f ${srcdir}/$d/[0-9][0-9]_*.mal ${builddir}/$d/autoload/ 2>/dev/null
@@ -55,9 +55,9 @@ case "$V" in
 # where compiled monetdb4 modules are to be found
 for d in modules/plain modules/contrib modules/calibrator modules/mapi @HAVE_NETCDF_TRUE@ modules/mnetcdf
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/monetdb4/$d/.libs:${buildbase}/monetdb4/$d:"
+	MOD_PATH="${MOD_PATH}:${buildbase}/monetdb4/$d/.libs:${buildbase}/monetdb4/$d"
 done
-MOD_PATH="${MOD_PATH}${srcdir}/../monetdb4/scripts/tools"
+MOD_PATH="${MOD_PATH}:${srcdir}/../monetdb4/scripts/tools"
 PATH="${buildbase}/monetdb4/tools:$PATH"
 cfg="${buildbase}/monetdb4/conf/MonetDB.conf"   
 ;;
@@ -65,7 +65,7 @@ cfg="${buildbase}/monetdb4/conf/MonetDB.conf"
 # where compiled SQL modules are to be found
 for d in backends/monet5 backends/monet5/vaults sql
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/sql/$d/.libs:${buildbase}/sql/$d:"
+	MOD_PATH="${MOD_PATH}:${buildbase}/sql/$d/.libs:${buildbase}/sql/$d"
 	# enable auto-loading of modules before `make install`
 	mkdir -p ${buildbase}/sql/$d/autoload
 	cp -f ${srcdir}/../sql/$d/[0-9][0-9]_*.mal ${buildbase}/sql/$d/autoload/ 2>/dev/null
@@ -76,7 +76,7 @@ cp -f ${srcdir}/../sql/sql/[0-9][0-9]_*.sql ${buildbase}/sql/sql/createdb/ 2>/de
 # where compiled monetdb5 modules are to be found
 for d in optimizer scheduler modules/atoms modules/kernel modules/mal extras/crackers extras/rdf extras/xml
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/monetdb5/$d/.libs:${buildbase}/monetdb5/$d:"
+	MOD_PATH="${MOD_PATH}:${buildbase}/monetdb5/$d/.libs:${buildbase}/monetdb5/$d"
 	# enable auto-loading of modules before `make install`
 	mkdir -p ${buildbase}/monetdb5/$d/autoload
 	cp -f ${srcdir}/../monetdb5/$d/[0-9][0-9]_*.mal ${buildbase}/monetdb5/$d/autoload/ 2>/dev/null
@@ -87,6 +87,7 @@ cfg="${buildbase}/monetdb5/misc/monetdb5.conf"
 esac
 
 # enhance various paths to find our stuff
+MOD_PATH="${MOD_PATH#:}"
 libpath="${MOD_PATH}"
 PATH="${buildbase}/clients/mapiclient:${buildbase}/testing:$PATH"
 export PATH
