--- a/monetdb4/RunMtest.in
+++ b/monetdb4/RunMtest.in
@@ -27,11 +27,12 @@ uname=`uname`
 # where compiled monetdb4 modules are to be found
 for d in modules/plain modules/contrib modules/calibrator mapi @HAVE_NETCDF_TRUE@ modules/mnetcdf
 do
-	MOD_PATH="${MOD_PATH}${builddir}/$d/.libs:${builddir}/$d:"
+	MOD_PATH="${MOD_PATH}:${builddir}/$d/.libs:${builddir}/$d"
 done
-MOD_PATH="${MOD_PATH}${srcdir}/scripts/tools"
+MOD_PATH="${MOD_PATH}:${srcdir}/scripts/tools"
 
 # enhance various paths to find our stuff
+MOD_PATH="${MOD_PATH#:}"
 binpath="${builddir}/tools:${buildbase}/clients/mapiclient:${buildbase}/testing"
 libpath="${MOD_PATH}:${builddir}/monet/.libs"
 
