--- a/monetdb5/RunMtest.in
+++ b/monetdb5/RunMtest.in
@@ -27,13 +27,14 @@ uname=`uname`
 # where compiled monetdb5 modules are to be found
 for d in optimizer scheduler modules/atoms modules/kernel modules/mal extras/crackers extras/rdf extras/xml
 do
-	MOD_PATH="${MOD_PATH}${builddir}/$d/.libs:${builddir}/$d:"
+	MOD_PATH="${MOD_PATH}:${builddir}/$d/.libs:${builddir}/$d"
 	# enable auto-loading of modules before `make install`
 	mkdir -p ${builddir}/$d/autoload
 	cp -f ${srcdir}/$d/[0-9][0-9]_*.mal ${builddir}/$d/autoload/ 2>/dev/null
 done
 
 # enhance various paths to find our stuff
+MOD_PATH="${MOD_PATH#:}"
 binpath="${buildbase}/tools/mserver:${buildbase}/clients/mapiclient:${buildbase}/testing"
 libpath="${MOD_PATH}:${builddir}/mal/.libs"
 
