--- a/template/RunMtest.in
+++ b/template/RunMtest.in
@@ -40,7 +40,7 @@ done
 # where compiled Pathfinder modules are to be found
 for d in src/monetdb$V
 do
-	MOD_PATH="${MOD_PATH}${builddir}/$d/.libs:${builddir}/$d:"
+	MOD_PATH="${MOD_PATH}:${builddir}/$d/.libs:${builddir}/$d"
 done
 
 case "$V" in
@@ -48,9 +48,9 @@ case "$V" in
 # where compiled monetdb4 modules are to be found
 for d in modules/plain modules/contrib modules/calibrator modules/mapi @HAVE_NETCDF_TRUE@ modules/mnetcdf
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/monetdb4/$d/.libs:${buildbase}/monetdb4/$d:"
+	MOD_PATH="${MOD_PATH}:${buildbase}/monetdb4/$d/.libs:${buildbase}/monetdb4/$d"
 done
-MOD_PATH="${MOD_PATH}${srcdir}/../monetdb4/scripts/tools"
+MOD_PATH="${MOD_PATH}:${srcdir}/../monetdb4/scripts/tools"
 PATH="${buildbase}/monetdb4/tools:$PATH"
 cfg="${buildbase}/monetdb4/conf/MonetDB.conf"   
 ;;
@@ -58,7 +58,7 @@ cfg="${buildbase}/monetdb4/conf/MonetDB.conf"
 # where compiled monetdb5 modules are to be found
 for d in optimizer scheduler modules/atoms modules/kernel modules/mal extras/crackers extras/rdf extras/xml
 do
-	MOD_PATH="${MOD_PATH}${buildbase}/monetdb5/$d/.libs:${buildbase}/monetdb5/$d:"
+	MOD_PATH="${MOD_PATH}:${buildbase}/monetdb5/$d/.libs:${buildbase}/monetdb5/$d"
 	# enable auto-loading of modules before `make install`
 	mkdir -p ${buildbase}/monetdb5/$d/autoload
 	cp -f ${srcdir}/../monetdb5/$d/[0-9][0-9]_*.mal ${buildbase}/monetdb5/$d/autoload/ 2>/dev/null
@@ -69,6 +69,7 @@ cfg="${buildbase}/monetdb5/misc/monetdb5.conf"
 esac
 
 # enhance various paths to find our stuff
+MOD_PATH="${MOD_PATH#:}"
 libpath="${MOD_PATH}"
 PATH="${buildbase}/clients/mapiclient:${buildbase}/testing:$PATH"
 export PATH
